# binance_fetcher

./: .gitignore  Cargo.toml  Dockerfile  Readme.md  Settings.toml
src/: candle.rs  fetcher.rs  main.rs  redis_store.rs  settings.rs
