[package]
name = "binance_fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", optional = true }
ureq = { version = "2.1.3", optional = true }
tungstenite = { version = "0.21.0", optional = true }
env_logger = "0.10.0"
log = "0.4"
binance_spot_connector_rust = { git = "https://github.com/binance/binance-spot-connector-rust.git", tag = "v1.1.0", features = ["full"]}
# enable-hyper
hyper = { version = "1.1.0", features = ["full"], optional = true }
serde_json = { version = "1.0.111", optional = true }
hyper-tls = {version = "0.6.0", optional = true }
futures-util = {version = "0.3.21", optional = true }

[features]
full = ["enable-hyper", "enable-tungstenite", "enable-ureq", "enable-tokio-tungstenite"]
enable-hyper = ["hyper", "hyper-tls", "serde_json", "futures-util"]
enable-tungstenite = ["tungstenite", "tokio-tungstenite"]
enable-ureq = ["ureq"]
enable-tokio-tungstenite = ["tokio-tungstenite"]
